@@ -191,7 +191,8 @@ class JArchiveZip extends JObject
 		}
 
 		for ($i=0,$n=count($this->_metadata);$i<$n;$i++) {
-			if (substr($this->_metadata[$i]['name'], -1, 1) != '/' && substr($this->_metadata[$i]['name'], -1, 1) != '\\') {
+            $lastPathCharacter = substr($this->_metadata[$i]['name'], -1, 1);
+			if ($lastPathCharacter !== '/' && $lastPathCharacter !== '\\') {
 				$buffer = $this->_getFileData($i);
 				$path = JPath::clean($destination.DS.$this->_metadata[$i]['name']);
 				// Make sure the destination folder exists
@@ -293,8 +294,9 @@ class JArchiveZip extends JObject
 
 		// Get details from Central directory structure.
 		$fhStart = strpos($data, $this->_ctrlDirHeader, $offset);
+        $dataLength = strlen($data);
 		do {
-			if (strlen($data) < $fhStart +31) {
+			if ($dataLength < $fhStart +31) {
 				$this->set('error.message', 'Invalid ZIP data');
 				return false;
 			}
@@ -304,7 +306,7 @@ class JArchiveZip extends JObject
 			$entries[$name] = array('attr' => null, 'crc' => sprintf("%08s", dechex($info['CRC32'])), 'csize' => $info['Compressed'], 'date' => null, '_dataStart' => null, 'name' => $name, 'method' => $this->_methods[$info['Method']], '_method' => $info['Method'], 'size' => $info['Uncompressed'], 'type' => null);
 			$entries[$name]['date'] = mktime((($info['Time'] >> 11) & 0x1f), (($info['Time'] >> 5) & 0x3f), (($info['Time'] << 1) & 0x3e), (($info['Time'] >> 21) & 0x07), (($info['Time'] >> 16) & 0x1f), ((($info['Time'] >> 25) & 0x7f) + 1980));
 
-			if (strlen($data) < $fhStart +43) {
+			if ($dataLength < $fhStart +43) {
 				$this->set('error.message', 'Invalid ZIP data');
 				return false;
 			}
@@ -320,7 +322,7 @@ class JArchiveZip extends JObject
 
 			// Get details from local file header since we have the offset
 			$lfhStart = strpos($data, $this->_fileHeader, $entries[$name]['offset']);
-			if (strlen($data) < $lfhStart +34) {
+			if ($dataLength < $lfhStart +34) {
 				$this->set('error.message', 'Invalid ZIP data');
 				return false;
 			}
@@ -343,10 +345,7 @@ class JArchiveZip extends JObject
 	 */
 	function _getFileData($key) {
 		if ($this->_metadata[$key]['_method'] == 0x8) {
-			// If zlib extention is loaded use it
-			if (extension_loaded('zlib')) {
-				return @ gzinflate(substr($this->_data, $this->_metadata[$key]['_dataStart'], $this->_metadata[$key]['csize']));
-			}
+		    return gzinflate(substr($this->_data, $this->_metadata[$key]['_dataStart'], $this->_metadata[$key]['csize']));
 		}
 		elseif ($this->_metadata[$key]['_method'] == 0x0) {
 			/* Files that aren't compressed. */
